2009-09-18  Sebastian Marsching <sebastian.marsching@1und1.de>

	Fixed URI handling in pfx:image.

2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added support for includepart scheme.

	Added extension points for static resource and rewrote 
	DocrootRequestHandler to use new resource system.

2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed config-include support.

	Added extension point support for direct output pages

2009-08-07  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed old PustefixWebApplicationContext.

	Added extension point support for page request process actions.

	Removed "ResdocFinalizer".

	Added extension point support for input wrappers.

	Removed PropertyObjectManager.

2009-08-05  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request output resource extension points.

2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request extension points.

	Refactored page configuration in order to prepare for extension
	point support.

	Added page flow step extension points.

	Removed caching of page name to page flow name map.

2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed FlowStepActionFactory.

	Support for page flow variant extension points.

2009-07-27  Martin Leidig  <mleidig@schlund.de>

	Fixed possible deadlock within SessionEndNotificator when
	one thread adds a SessionListener after getting a lock to an
	application object, while another thread is invalidating
	the session and calls a registered SessionListener, which itself
	tries to lock the same application object.

2009-07-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added code to load the configuration for a module application context.

	Added more code for page flow extension points.

	Made Pustefix Context available and register request and session
	scope in module's application context.

2009-07-23  Sebastian Marsching <sebastian.marsching@1und1.de>
