@@ -49,6 +49,12 @@
     <match>/p:pustefix-module/p:dynamic-includes</match>
   </handler>
   
+  <!-- Make Pustefix context available in module's application context -->
+  
+  <handler class="org.pustefixframework.config.module.parser.RegisterContextParsingHandler">
+    <match>/p:pustefix-module</match>
+  </handler>
+  
   <!-- Properties support (unused at the moment) -->
   
   <handler class="org.pustefixframework.config.generic.PropertiesParsingHandler">
