@@ -1,5 +1,7 @@
 2009-09-18  Sebastian Marsching <sebastian.marsching@1und1.de>
 
+	Made Pustefix context available in modules.
+
 	Fixed URI handling in pfx:image.
 
 2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>
